[package]
name = "kademlia"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.46", features = ["derive"] }
rand = "0.9.2"
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha1 = "0.10.6"
